// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an inny type Switch 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-switch"
    height="20px"
  >
    <styled.div
      bottom=""
      className="ui-switch-slider ui-slider-on"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      id=""
      initialToggle={true}
      innyScale={0.6}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Switch"
      onClick={[Function]}
      outyScale={1.25}
      padding=""
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#5cb85c",
        }
      }
      switchType={0}
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    >
      <styled.div
        className="ui-switch-button ripple"
        height="9.6px"
        onClick={[Function]}
        style={
          Object {
            "left": "5%",
          }
        }
        width="9.6px"
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of an outy type Switch 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-switch"
    height="20px"
  >
    <styled.div
      bottom=""
      className="ui-switch-slider ui-slider-on"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      id=""
      initialToggle={true}
      innyScale={0.6}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Switch"
      onClick={[Function]}
      outyScale={1.25}
      padding=""
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#5cb85c",
        }
      }
      switchType={1}
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    >
      <styled.div
        className="ui-switch-button ripple"
        height="20px"
        onClick={[Function]}
        style={
          Object {
            "left": "-15%",
          }
        }
        width="20px"
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of the Switch control 1`] = `
<Switch
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  id=""
  initialToggle={false}
  innyScale={0.6}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Switch"
  onClick={[Function]}
  outyScale={1.25}
  padding=""
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-switch"
      height="20px"
    >
      <div
        className="ui-switch sc-htpNat byUckz"
        height="20px"
      >
        <styled.div
          bottom=""
          className="ui-switch-slider ui-slider-off"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          errorMessage=""
          focus={false}
          height=""
          id=""
          initialToggle={false}
          innyScale={0.6}
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Switch"
          onClick={[Function]}
          outyScale={1.25}
          padding=""
          selected={false}
          sizing="normal"
          sliderScale={1.25}
          style={
            Object {
              "backgroundColor": "#d9534f",
            }
          }
          switchType={1}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          <div
            className="ui-switch-slider ui-slider-off sc-bwzfXH hQFvTb"
            contentEditable={false}
            direction="right"
            disabled={true}
            height=""
            id=""
            onClick={[Function]}
            selected={false}
            style={
              Object {
                "backgroundColor": "#d9534f",
              }
            }
            width=""
          >
            <styled.div
              className="ui-switch-button"
              height="20px"
              onClick={[Function]}
              style={
                Object {
                  "left": "45%",
                }
              }
              width="20px"
            >
              <div
                className="ui-switch-button sc-bdVaJa imgpYe"
                height="20px"
                onClick={[Function]}
                style={
                  Object {
                    "left": "45%",
                  }
                }
                width="20px"
              />
            </styled.div>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</Switch>
`;

exports[`Test making the Switch control invisible 1`] = `
<Switch
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  id=""
  initialToggle={false}
  innyScale={0.6}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Switch"
  onClick={[Function]}
  outyScale={1.25}
  padding=""
  selected={false}
  sizing="normal"
  sliderScale={1.25}
  style={Object {}}
  switchType={1}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-switch"
      height="20px"
    >
      <div
        className="ui-switch sc-htpNat byUckz"
        height="20px"
      >
        <styled.div
          bottom=""
          className="ui-switch-slider ui-slider-off"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          id=""
          initialToggle={false}
          innyScale={0.6}
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Switch"
          onClick={[Function]}
          outyScale={1.25}
          padding=""
          selected={false}
          sizing="normal"
          sliderScale={1.25}
          style={
            Object {
              "backgroundColor": "#d9534f",
            }
          }
          switchType={1}
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={false}
          width=""
          xcss={null}
        >
          <div
            className="ui-switch-slider ui-slider-off sc-bwzfXH gkllVH"
            contentEditable={false}
            direction="right"
            disabled={false}
            height=""
            id=""
            onClick={[Function]}
            selected={false}
            style={
              Object {
                "backgroundColor": "#d9534f",
              }
            }
            width=""
          >
            <styled.div
              className="ui-switch-button ripple"
              height="20px"
              onClick={[Function]}
              style={
                Object {
                  "left": "45%",
                }
              }
              width="20px"
            >
              <div
                className="ui-switch-button ripple sc-bdVaJa imgpYe"
                height="20px"
                onClick={[Function]}
                style={
                  Object {
                    "left": "45%",
                  }
                }
                width="20px"
              />
            </styled.div>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</Switch>
`;

exports[`Test retrieval of the Switch props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "initialToggle": false,
  "innyScale": 0.6,
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Switch",
  "onClick": [Function],
  "outyScale": 1.25,
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "sliderScale": 1.25,
  "style": Object {},
  "switchType": 1,
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the click handler on the Switch control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-switch"
    height="20px"
  >
    <styled.div
      bottom=""
      className="ui-switch-slider ui-slider-off"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      id=""
      initialToggle={false}
      innyScale={0.6}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Switch"
      onClick={[Function]}
      outyScale={1.25}
      padding=""
      selected={false}
      sizing="normal"
      sliderScale={1.25}
      style={
        Object {
          "backgroundColor": "#d9534f",
        }
      }
      switchType={1}
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    >
      <styled.div
        className="ui-switch-button ripple"
        height="20px"
        onClick={[Function]}
        style={
          Object {
            "left": "45%",
          }
        }
        width="20px"
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;
